# fastapi-url-shortener

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
url-shortener/: .coveragerc  .env.template  app_lifespan.py  config.default.yaml  main.py  manage.bat  manage.py  stuff.py
url-shortener/api/: __init__.py  main_views.py  redirect_views.py
url-shortener/api/api_v1/: __init__.py
url-shortener/api/api_v1/auth/services/: redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  redis.py  views.py
url-shortener/api/api_v1/short_urls/views/: details_views.py  list_views.py
url-shortener/commands/: cli.py  hello.py  tokens.py
url-shortener/core/: config.py
url-shortener/dependencies/: auth.py  short_urls.py
url-shortener/pages/: home.html
url-shortener/rest/: __init__.py  main_views.py
url-shortener/rest/short_urls/: __init__.py  create_views.py  list_views.py
url-shortener/schemas/: short_url.py
url-shortener/services/auth/: __init__.py  redis_tokens_helper.py  redis_users_helper.py
url-shortener/storage/short_urls/: __init__.py  crud.py  exceptions.py
url-shortener/templates/: about.html  base.html  home.html
url-shortener/templates/components/: navbar.html
url-shortener/templates/macro/: form_fields.html
url-shortener/templates/short-urls/: create.html  list.html
url-shortener/templating/: jinja_templates.py
url-shortener/testing/: conftest.py
url-shortener/testing/test_api/: conftest.py  test_main_views.py
url-shortener/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/: test_crud.py  test_dependencies.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_details_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_list_views/: test_create.py
url-shortener/testing/test_shemas/: test_short_url.py  test_user.py
