[project]
name = "fastapi-url-shorneter"
description = "A learning project from the @mahenzon course"
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.116.1"}
redis = {extras = ["hiredis"], version = "^6.4.0"}
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]