[project]
name = "fastapi-url-shorneter"
description = "A learning project from the @mahenzon course"
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.116.1"}
redis = {extras = ["hiredis"], version = "^6.4.0"}
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.8"


# mypy settings

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]


# ruff settings

[tool.ruff]
required-version = ">=0.12.8"
src = [
    "url-shortener",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "ANN",  # flake8-annotations (ANN)
    "FAST", # FastAPI (FAST)
    "I", # isort (I)
    "F", # Pyflakes (F)
]
ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
