[project]
name = "fastapi-url-shorneter"
description = "A learning project from the @mahenzon course"
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false
requires-poetry = "~=2.1.4"

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.116.1"}
redis = {extras = ["hiredis"], version = "^6.4.0"}
typer = "^0.16.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "~=0.12.8"
pre-commit = "^4.3.0"
coverage = "^7.10.3"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-cov = "^6.2.1"

# pytset settings
[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra --strict-markers"
log_cli = false
log_cli_level = "INFO"
console_output_style = "progress"
xfail_strict = true

markers = [
    "apitest: test any http apy call",
]


[tool.mypy]  # mypy settings
strict = true
plugins = [
    "pydantic.mypy",
]



[tool.ruff]  # ruff settings
required-version = "~=0.12.8"
src = [
    "url-shortener",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "FAST", # FastAPI (FAST)
    "YTT", # flake8-2020 (YTT)
    "ANN", # flake8-annotations (ANN)
    # "ASYNC", # flake8-async (ASYNC)
    "S", # flake8-bandit (S)
    "BLE", # flake8-blind-except (BLE)
    "FBT", # flake8-boolean-trap (FBT)
    "B", # flake8-bugbear (B)
    "COM", # flake8-commas (COM)
    "C4", # flake8-comprehensions (C4)
    "DTZ", # flake8-datetimez (DTZ)
    "T10", # flake8-debugger (T10)
    "EM", # flake8-errmsg (EM)
    "ISC", # flake8-implicit-str-concat (ISC)
    "ICN", # flake8-import-conventions (ICN)
    "LOG", # flake8-logging (LOG)
    "G", # flake8-logging-format (G)
    "INP", # flake8-no-pep420 (INP)
    "PIE", # flake8-pie (PIE)
    "T20", # flake8-print (T20)
    "PYI", # flake8-pyi (PYI)
    # "PT", # flake8-pytest-style (PT)
    "Q", # flake8-quotes (Q)
    "RSE", # flake8-raise (RSE)
    "RET", # flake8-return (RET)
    "SLF", # flake8-self (SLF)
    "SIM", # flake8-simplify (SIM)
    "SLOT", # flake8-slots (SLOT)
    "TC", # flake8-type-checking (TC)
    "ARG", # flake8-unused-arguments (ARG)
    "PTH", # flake8-use-pathlib (PTH)
    "FLY", # flynt (FLY)
    "I", # isort (I)
    "C90", # mccabe (C90)
    "N", # pep8-naming (N)
    "PERF", # Perflint (PERF)
    "E", # pycodestyle Error (E)
    "W", # pycodestyle Warning (W)
    # "DOC", # pydoclint (DOC)
    # "D", # pydocstyle (D)
    "F", # Pyflakes (F)
    "PGH", # pygrep-hooks (PGH)
    "PLC", # Pylint Convention (PLC)
    "PLE", # Pylint Error (PLE)
    "PLR", # Pylint Refactor (PLR)
    "PLW", # Pylint Warning (PLW)
    "UP", # pyupgrade (UP)
    "FURB", # refurb (FURB)
    "RUF", # Ruff-specific rules (RUF)
    "TRY", # tryceratops (TRY)
]
ignore = [
    "S101", # S101	assert	Use of assert detected
    "RUF001", # ambiguous-unicode-character-string (RUF001)
    "RUF002", # ambiguous-unicode-character-docstring (RUF002)
    "RUF003", # ambiguous-unicode-character-comment (RUF003)
    "TC006", # runtime-cast-value (TC006)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"stuff.py" = [
    "T20", # flake8-print (T20)
]
"**/test_*.py" = [
    "S311", # S311 Standard pseudo-random generators are not suitable for cryptographic purposes
]
"**/conftest.py" = [
    "S311", # S311 Standard pseudo-random generators are not suitable for cryptographic purposes
]
